0.02
 - Fix minimal dependency of Tags::HTML.

0.01 2022-07-07T22:34:28+02:00
 - First version.