@@ -65,14 +65,22 @@ sub _process_css {
 
 		['s', '.login'],
 		['d', 'text-align', 'center'],
-		['d', 'background-color', 'blue'],
-		['d', 'padding', '1em'],
 		['e'],
 
 		['s', '.login a'],
 		['d', 'text-decoration', 'none'],
-		['d', 'color', 'white'],
-		['d', 'font-size', '3em'],
+		['d', 'background-image', 'linear-gradient(to bottom,#fff 0,#e0e0e0 100%)'],
+		['d', 'background-repeat', 'repeat-x'],
+		['d', 'border', '1px solid #adadad'],
+		['d', 'border-radius', '4px'],
+		['d', 'color', 'black'],
+		['d', 'font-family', 'sans-serif!important'],
+		['d', 'padding', '15px 40px'],
+		['e'],
+
+		['s', '.login a:hover'],
+		['d', 'background-color', '#e0e0e0'],
+		['d', 'background-image', 'none'],
 		['e'],
 	);
 
@@ -209,13 +217,20 @@ Returns undef.
  # }
  # .login {
  #         text-align: center;
- #         background-color: blue;
- #         padding: 1em;
  # }
  # .login a {
  #         text-decoration: none;
- #         color: white;
- #         font-size: 3em;
+ #         background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
+ #         background-repeat: repeat-x;
+ #         border: 1px solid #adadad;
+ #         border-radius: 4px;
+ #         color: black;
+ #         font-family: sans-serif!important;
+ #         padding: 15px 40px;
+ # }
+ # .login a:hover {
+ #         background-color: #e0e0e0;
+ #         background-image: none;
  # }
  #
  # HTML
