@@ -1,10 +1,12 @@
 TODO
 ====
 2. Az bude Tags::HTML::Login::Access, tak pridat do see also sekce.
-3. Better CSS.
 4.
 
 Applied
 =======
 1. Prepsat na Tags::HTML a dedit.
 OK [20211002] skim
+
+3. Better CSS.
+OK [20220912] skim
