@@ -25,14 +25,22 @@ is_deeply(
 
 		['s', '.login'],
 		['d', 'text-align', 'center'],
-		['d', 'background-color', 'blue'],
-		['d', 'padding', '1em'],
 		['e'],
 
 		['s', '.login a'],
 		['d', 'text-decoration', 'none'],
-		['d', 'color', 'white'],
-		['d', 'font-size', '3em'],
+		['d', 'background-image', 'linear-gradient(to bottom,#fff 0,#e0e0e0 100%)'],
+		['d', 'background-repeat', 'repeat-x'],
+		['d', 'border', '1px solid #adadad'],
+		['d', 'border-radius', '4px'],
+		['d', 'color', 'black'],
+		['d', 'font-family', 'sans-serif!important'],
+		['d', 'padding', '15px 40px'],
+		['e'],
+
+		['s', '.login a:hover'],
+		['d', 'background-color', '#e0e0e0'],
+		['d', 'background-image', 'none'],
 		['e'],
 	],
 	'Default login button CSS.',
